--- a/backend/resources/sass/app.scss
+++ b/backend/resources/sass/app.scss
@@ -1,10 +1,11 @@
+header {
+  text-align: center;
+}
+
 body {
   font-family: 'Nunito';
 }
 
 footer {
-
-  small {
-    text-align: center;
-  }
+  text-align: center;
 }
