--- a/backend/resources/sass/app.scss
+++ b/backend/resources/sass/app.scss
@@ -1,9 +1,22 @@
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
 header {
   text-align: center;
 }
 
 body {
   font-family: 'Nunito';
+
+  .welcome {
+    text-align: center;
+  }
 }
 
 footer {
