--- a/backend/public/css/app.css
+++ b/backend/public/css/app.css
@@ -10907,11 +10907,11 @@ header {
   text-align: center;
 }
 
-body {
+main {
   font-family: "Nunito";
 }
 
-body .welcome {
+main .welcome {
   text-align: center;
 }
 
