--- a/backend/resources/sass/app.scss
+++ b/backend/resources/sass/app.scss
@@ -4,6 +4,12 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+h1 {
+  font-size: 1.2rem;
+  font-family: cursive;
+  margin-bottom: 0;
+}
+
 header {
   text-align: center;
 }
@@ -14,8 +20,16 @@ main {
   .welcome {
     text-align: center;
   }
+
+  .admin-event-create {
+    text-align: center;
+  }
 }
 
 footer {
+  padding: 0.5rem 1rem;
+  line-height: 60px;
   text-align: center;
+  background-color: #fff;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
