--- a/backend/public/css/app.css
+++ b/backend/public/css/app.css
@@ -10956,6 +10956,155 @@ main .admin-album-create {
   text-align: center;
 }
 
+main .admin-album-create ul {
+  padding: 0;
+  text-align: left;
+  list-style: none;
+}
+
+main .admin-album-create #image-preview-list {
+  position: relative;
+}
+
+main .admin-album-create #image-preview-list li {
+  display: inline;
+}
+
+main .admin-album-create #image-preview-list li img {
+  width: 60px;
+  height: 60px;
+  border-radius: 20%;
+  border: solid 2px #ddd;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(2) {
+  position: absolute;
+  top: 0;
+  left: 20px;
+  z-index: 2;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(3) {
+  position: absolute;
+  top: 0;
+  left: 40px;
+  z-index: 3;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(4) {
+  position: absolute;
+  top: 0;
+  left: 60px;
+  z-index: 4;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(5) {
+  position: absolute;
+  top: 0;
+  left: 80px;
+  z-index: 5;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(6) {
+  position: absolute;
+  top: 0;
+  left: 100px;
+  z-index: 6;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(7) {
+  position: absolute;
+  top: 0;
+  left: 120px;
+  z-index: 7;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(8) {
+  position: absolute;
+  top: 0;
+  left: 140px;
+  z-index: 8;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(9) {
+  position: absolute;
+  top: 0;
+  left: 160px;
+  z-index: 9;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(10) {
+  position: absolute;
+  top: 0;
+  left: 180px;
+  z-index: 10;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(11) {
+  position: absolute;
+  top: 0;
+  left: 200px;
+  z-index: 11;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(12) {
+  position: absolute;
+  top: 0;
+  left: 220px;
+  z-index: 12;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(13) {
+  position: absolute;
+  top: 0;
+  left: 240px;
+  z-index: 13;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(14) {
+  position: absolute;
+  top: 0;
+  left: 260px;
+  z-index: 14;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(15) {
+  position: absolute;
+  top: 0;
+  left: 280px;
+  z-index: 15;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(16) {
+  position: absolute;
+  top: 0;
+  left: 300px;
+  z-index: 16;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(17) {
+  position: absolute;
+  top: 0;
+  left: 320px;
+  z-index: 17;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(18) {
+  position: absolute;
+  top: 0;
+  left: 340px;
+  z-index: 18;
+}
+
+main .admin-album-create #image-preview-list li:nth-of-type(19) {
+  position: absolute;
+  top: 0;
+  left: 360px;
+  z-index: 19;
+}
+
 main .album-index a {
   color: unset;
 }
