--- a/backend/public/css/app.css
+++ b/backend/public/css/app.css
@@ -11117,10 +11117,12 @@ main .admin-album-edit .create-images ul {
 
 main .admin-album-edit .create-images #image-preview-list {
   position: relative;
+  perspective: 300px;
 }
 
 main .admin-album-edit .create-images #image-preview-list li {
-  display: inline;
+  transform: rotateY(60deg);
+  transform-origin: left center;
 }
 
 main .admin-album-edit .create-images #image-preview-list li img {
@@ -11256,6 +11258,26 @@ main .admin-album-edit .create-images #image-preview-list li:nth-of-type(19) {
   top: 0;
   left: 360px;
   z-index: 19;
+}
+
+main .admin-album-edit .create-images #image-preview-list li:nth-last-of-type(1) {
+  width: 60px;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 20%;
+  border: solid 2px #ddd;
+  text-align: center;
+  transform: none;
+  transform-origin: none;
+  perspective: none;
+}
+
+main .admin-album-edit .create-images #image-preview-list li:nth-last-of-type(1) span {
+  line-height: 60px;
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: large;
+  color: #97D3E5;
 }
 
 main .admin-album-edit .delete-images {
