--- a/backend/resources/sass/app.scss
+++ b/backend/resources/sass/app.scss
@@ -95,11 +95,14 @@ main {
           text-align: left;
           list-style: none;
         }
+
         #image-preview-list {
           position: relative;
+          perspective: 300px;
 
           li {
-            display: inline;
+            transform: rotateY(60deg);
+            transform-origin: left center;
 
             img {
               width: 60px;
@@ -115,6 +118,25 @@ main {
                 top: 0;
                 left: 20px * ($i - 1);
                 z-index: $i;
+              }
+            }
+            &:nth-last-of-type(1) {
+              width: 60px;
+              height: 60px;
+              background: rgba(255, 255, 255, 0.9);
+              border-radius: 20%;
+              border: solid 2px #ddd;
+              text-align: center;
+              transform: none;
+              transform-origin: none;
+              perspective: none;
+
+              span {
+                line-height: 60px;
+                font-family: 'Roboto';
+                font-weight: bold;
+                font-size: large;
+                color: #97D3E5;
               }
             }
           }
