--- a/backend/public/css/app.css
+++ b/backend/public/css/app.css
@@ -11112,10 +11112,10 @@ main .admin-album-edit {
 main .admin-album-edit .create-images ul {
   padding: 0;
   text-align: left;
-  list-style: none;
 }
 
 main .admin-album-edit .create-images #image-preview-list {
+  list-style: none;
   position: relative;
   perspective: 300px;
 }
@@ -11306,12 +11306,49 @@ main .admin-album-edit .delete-images ul li img {
      object-fit: cover;
 }
 
-main .album-index a {
+main .album-index .card {
+  margin-bottom: 20px;
+}
+
+main .album-index .card a {
   color: unset;
 }
 
-main .album-index img {
-  width: 100%;
+main .album-index .card .card-body {
+  padding: 2rem;
+}
+
+main .album-index .card .card-body .images ul {
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
+main .album-index .card .card-body .images ul li img {
+  width: 200px;
+  height: 150px;
+  border: solid 2px #ddd;
+  border-radius: 50px;
+  position: relative;
+  z-index: -1;
+}
+
+main .album-index .card .card-body .images ul .li-0 {
+  box-shadow: -30px 0px 10px 0px white inset;
+}
+
+main .album-index .card .card-body .images ul .li-1 {
+  position: absolute;
+  top: 0;
+  left: 30px;
+}
+
+main .album-index .card .card-body .images ul .li-2 {
+  position: absolute;
+  top: 0;
+  left: 200px;
 }
 
 main .album-show img {
