--- a/backend/resources/sass/app.scss
+++ b/backend/resources/sass/app.scss
@@ -93,10 +93,10 @@ main {
         ul {
           padding: 0;
           text-align: left;
-          list-style: none;
         }
 
         #image-preview-list {
+          list-style: none;
           position: relative;
           perspective: 300px;
 
@@ -174,12 +174,53 @@ main {
 
     &-index {
 
-      a {
-        color: unset;
-      }
+      .card {
+        margin-bottom: 20px;
 
-      img {
-        width: 100%;
+        a {
+          color: unset;
+        }
+
+        .card-body {
+          padding: 2rem;
+
+          .images {
+
+            ul {
+              padding: 0;
+              list-style: none;
+              overflow: hidden;
+              position: relative;
+              z-index: 1;
+
+              li {
+
+                img {
+                  width: 200px;
+                  height: 150px;
+                  border: solid 2px #ddd;
+                  border-radius: 50px;
+                  position: relative;
+                  z-index: -1;
+                }
+              }
+
+              .li-0 {
+                box-shadow: -30px 0px 10px 0px white inset;
+              }
+              .li-1 {
+                position: absolute;
+                top: 0;
+                left: 30px
+              }
+              .li-2 {
+                position: absolute;
+                top: 0;
+                left: 200px;
+              }
+            }
+          }
+        }
       }
     }
     &-show {
